--- a/theme/style.css
+++ b/theme/style.css
@@ -1,5 +1,5 @@
 /*
- * Theme Name: My Timber Starter Theme
+ * Theme Name: Starter Theme
  * Description: Starter Theme to use with Timber
- * Author: Upstatement and YOU!
+ * Author: schaal.design
 */
